backend.yaml
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: backend-deployment 
  namespace: digi 
spec:
  replicas: 1
  minReadySeconds: 10 
  selector:
    matchLabels:
      apps: digii 
  template:
    metadata:
      labels:
        apps: digii 
    spec:
      terminationGracePeriodSeconds: 10 
      containers:
        - name: backend-cont 
          image: mongo 
          ports:
            - containerPort: 4545 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
