frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: frontend-service 
  namespace: digi
spec:
  selector:
    app: digi 
  ports:
  - targetPort: 4545
    Port: 4545
  type: ClusterIP
