frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-digi
  namespace: new-ns 
spec: 
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels: 
      app: digital
  template:
    metadata:
      labels: 
        app: digital
    spec: 
      containers:
        - name: digi-cont 
          image: muralisocial123/digital-bank:1.1.0
          ports:
             - containerPort: 4545
          resources:
            requests: 
              memory: "100Mi"
              cpu: "200m"
            limits: 
              memory: "500Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: digi-serv 
  namespace: new-ns
spec:
  selector:
    app: digi
  ports: 
  -  targetPort: 4545
     port: 4545
  type: NodePort
