HttpRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1 
kind: HTTPRoute 
metadata:
  name: digi-route 
  namespace: digi 
spec:
  parentRefs:
    - name: gateway-digi 
  rules:
    - matches:
      - path:
          type: PathPrefix 
          value: /
      filters:
        - type: URLRewrite 
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: / 
      backendRefs:
        - name: frontend-service 
          port: 4545
